--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "emotion": "^9.0.2",
     "flow-typed": "^2.4.0",
     "history": "^4.7.2",
+    "i18next": "^10.6.0",
     "npm-run-all": "^4.1.2",
     "prettier": "1.11.1",
     "rc-progress": "^2.2.5",
