--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-eslint": "^8.2.2",
     "emotion": "^9.0.2",
     "flow-typed": "^2.4.0",
     "history": "^4.7.2",
